# acmClusterGenerator

./: cluster-generator.yaml  kustomization.yaml  pyproject.toml
acmclustergenerator/: main.py  model.py  plugin.py
kustomize/plugin/operate-first.cloud/v1/acmclustergenerator/: acmClusterGenerator
